# SCFA

./: .gitignore  README.md  hash_sparse_forward.cu  pyproject.toml  qk_sparse_forward.cu  test_qk_sparse_forward.py
benchmark/: attention_benchmarks.ipynb  forward_benchmarks.ipynb  hash_benchmark.ipynb  test.py  test_hash_sparse_forward.py  test_qk_sparse_forward.py
experiments/: learnable_hashing.ipynb  monkeypatching.ipynb
experiments/training/: bucket_size_sweep.py  evaluations.ipynb  learnable_hashing.ipynb  run_eval.py  utils.py
legacy/: forward_benchmarks.ipynb
source/: hash_sparse_forward.cu
source/scfa_paper/: scfa_hash_sparse.py  scfa_qk_sparse.py  scfa_wrapper.py
source/splashattn/: splash.cu
source/thunderkittens/: qk_sparse.cu
source/v2/: hash_sparse_forward.cu  qk_sparse_forward.cu
